<resources>
    <string name="app_name">FindMyProf</string>
    <string name="request">Request</string>
    <string name="log_in">Log In</string>
    <string name="user_id">User Id</string>
    <string name="password">Password</string>
    <string name="time">Time</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="available">Available</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="response">Response</string>
    <string name="accept_reject">Accept/Reject</string>
    <string name="name">Name</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
</resources>
