<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            tools:text="@string/name" />

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            tools:text="@string/time" />

        <TextView
            android:id="@+id/textProfResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            android:textColor="@android:color/black"
            tools:text="@string/response" />

        <EditText
            android:id="@+id/editStudResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="30dp"
            android:autofillHints=""
            android:hint="@string/response"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnsnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:text="@string/accept"
            app:rippleColor="#33691E" />

        <Button
            android:id="@+id/btnsnReject"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="150dp"
            android:backgroundTint="@color/red_900"
            android:text="@string/reject"
            android:textColor="#FFFFFF"
            app:rippleColor="@color/red_300" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark" />

    </android.support.v7.widget.CardView>

</FrameLayout>