<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="42dp"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textTimeEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="90dp"
            android:layout_marginTop="42dp"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="68dp"
            android:text="@string/response"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/textAcRe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="30dp"
            android:layout_marginTop="92dp"
            android:text="@string/accept_reject"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline" />
    </android.support.v7.widget.CardView>

</FrameLayout>