<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textProfessor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="@tools:sample/full_names" />


        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@tools:sample/lorem[4:10]" />

        <EditText
            android:id="@+id/editResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            android:layout_marginTop="55dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/response"
            android:inputType="textMultiLine"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            app:rippleColor="#33691E"
            android:layout_gravity="bottom|start"
            android:layout_marginStart="30dp"
            android:layout_marginTop="95dp"
            android:backgroundTint="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/btnReject"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="150dp"
            android:backgroundTint="@color/red_900"
            android:text="@string/reject"
            android:textColor="#FFFFFF"
            app:rippleColor="@color/red_300" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="bottom"
            android:background="@color/colorPrimaryDark" />
    </android.support.v7.widget.CardView>
</FrameLayout>