<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_middle"
            android:text="@string/change_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_small" />

        <View
            android:layout_width="100dp"
            android:layout_height="3dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/white" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_xlarge" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/EditText.Blue.Hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/password"
                android:inputType="text"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_10"
                android:theme="@style/EditText.Blue" />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_mlarge" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/EditText.Blue.Hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_ConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4dp"
                android:layout_marginRight="-4dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/grey_10"
                android:theme="@style/EditText.Blue" />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_large" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:clickable="true"
                android:focusable="true"
                android:tint="@color/cyan_800"
                app:backgroundTint="@android:color/white"
                app:fabSize="normal"
                app:rippleColor="@color/cyan_800"
                app:srcCompat="@drawable/ic_arrow_right" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:theme="@style/ProgressBar.White"
                android:visibility="gone" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/spacing_medium" />

    </LinearLayout>

</RelativeLayout>