<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

<!--            <ImageView-->
<!--                android:layout_width="90dp"-->
<!--                android:layout_height="90dp"-->
<!--                android:layout_gravity="center_horizontal"-->

<!--                android:tint="@color/green_300" />-->
<!--            android:src="@drawable/logo_small_round"-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_middle"
                android:text="@string/log_in"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_small" />

            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/white" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_xlarge" />

            <Spinner
                android:id="@+id/spinner"
                style="@android:style/Widget.Material.Spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditText.Blue" />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/EditText.Blue.Hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/user_id"
                    android:inputType="text"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.Blue" />
            </android.support.design.widget.TextInputLayout>

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Username"-->
<!--                android:textAlignment="center"-->
<!--                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"-->
<!--                android:textColor="@color/blue_grey_500"-->
<!--                android:textStyle="bold" />-->

<!--            <EditText-->
<!--                style="@android:style/Widget.Material.EditText"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginLeft="-4dp"-->
<!--                android:layout_marginRight="-4dp"-->
<!--                android:inputType="textEmailAddress"-->
<!--                android:maxLength="50"-->
<!--                android:maxLines="1"-->
<!--                android:singleLine="true"-->
<!--                android:textColor="@color/grey_10"-->
<!--                android:theme="@style/EditText.White" />-->

<!--            <android.support.design.widget.TextInputLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="30dp"-->
<!--                android:theme="@style/EditText.White.Hint">-->

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_mlarge" />

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="Password"-->
<!--                android:textAlignment="center"-->
<!--                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"-->
<!--                android:textColor="@color/blue_grey_500"-->
<!--                android:textStyle="bold" />-->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/EditText.Blue.Hint">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/grey_10"
                    android:theme="@style/EditText.Blue" />

            </android.support.design.widget.TextInputLayout>

<!--            <EditText-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_marginLeft="-4dp"-->
<!--                android:layout_marginRight="-4dp"-->
<!--                android:inputType="textPassword"-->
<!--                android:maxLength="50"-->
<!--                android:maxLines="1"-->
<!--                android:singleLine="true"-->
<!--                android:textColor="@color/grey_10"-->
<!--                android:theme="@style/EditText.White"/>-->

<!--            <View-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="@dimen/spacing_middle" />-->

<!--            <TextView-->
<!--                android:id="@+id/forgot_password"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="right|end"-->
<!--                android:layout_marginTop="@dimen/spacing_medium"-->
<!--                android:clickable="true"-->
<!--                android:text="Forgot Password?"-->
<!--                android:textAlignment="center"-->
<!--                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
<!--                android:textColor="@color/blue_grey_400"-->
<!--                android:textStyle="bold" />-->

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_large" />

<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="55dp"-->
<!--                android:layout_marginLeft="-4dp"-->
<!--                android:layout_marginRight="-4dp"-->
<!--                android:background="@drawable/btn_rounded_green_300"-->
<!--                android:text="Login"-->
<!--                android:textAllCaps="false"-->
<!--                android:textColor="@color/blue_grey_900" />-->

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:tint="@color/cyan_800"
                    app:backgroundTint="@android:color/white"
                    app:fabSize="normal"
                    app:rippleColor="@color/cyan_800"
                    app:srcCompat="@drawable/ic_arrow_right"
                    android:focusable="true"
                    android:layout_marginBottom="5dp" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:theme="@style/ProgressBar.White"
                    android:visibility="gone" />

            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_medium" />

        </LinearLayout>

</RelativeLayout>